--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "goit-react-hw-05-movies",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.15.1"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
