--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "goit-react-hw-05-movies",
   "version": "0.1.0",
-  "engines": {
-    "node": "16.15.1"
-  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -24,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
